crates/service/tests/diagnostics/snapshots/features__diagnostics__dup_names__global.snap
---
source: crates/service/tests/diagnostics/dup_names.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 10
        },
        "end": {
          "line": 2,
          "character": 12
        }
      },
      "severity": 1,
      "code": "duplicated-names",
      "source": "wat",
      "message": "duplicated name `$_` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 4,
                "character": 10
              },
              "end": {
                "line": 4,
                "character": 12
              }
            }
          },
          "message": "already defined here as `$_`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 4,
          "character": 10
        },
        "end": {
          "line": 4,
          "character": 12
        }
      },
      "severity": 1,
      "code": "duplicated-names",
      "source": "wat",
      "message": "duplicated name `$_` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 12
              }
            }
          },
          "message": "already defined here as `$_`"
        }
      ]
    }
  ]
}
