crates/service/tests/diagnostics/snapshots/features__diagnostics__dup_names__memory.snap
---
source: crates/service/tests/diagnostics/dup_names.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 2,
          "character": 10
        },
        "end": {
          "line": 2,
          "character": 12
        }
      },
      "severity": 1,
      "code": "duplicated-names",
      "source": "wat",
      "message": "duplicated memory name `$_` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 3,
                "character": 10
              },
              "end": {
                "line": 3,
                "character": 12
              }
            }
          },
          "message": "already defined here as `$_`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 3,
          "character": 10
        },
        "end": {
          "line": 3,
          "character": 12
        }
      },
      "severity": 1,
      "code": "duplicated-names",
      "source": "wat",
      "message": "duplicated memory name `$_` in this scope",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 12
              }
            }
          },
          "message": "already defined here as `$_`"
        }
      ]
    }
  ]
}
